<resources>
    <string name="app_name">New Islam</string>

    <!--Welcome-->
    <string name="welcome_to_islam_message">Welcome to\nIslam Message</string>

    <!--Reset password-->
    <string name="reset_save_password">Save password</string>
    <string name="reset_confirm_your_password">Confirm your password</string>
    <string name="reset_confirm_password">Confirm password</string>
    <string name="reset_enter_your_password">Enter your password</string>
    <string name="reset_new_password">New password</string>

    <!--Login-->
    <string name="login_title">Login</string>
    <string name="login_email_address">Email Address</string>
    <string name="login_enter_your_email">Enter your email</string>
    <string name="login_enter_password">Enter password</string>
    <string name="login_enter_your_password">Enter your password</string>
    <string name="login_forgot_password">Forgot password?</string>
    <string name="login_login">Login</string>
    <string name="login_don_t_have_an_account">Don\'t have an account?</string>
    <string name="login_register">Register</string>

    <!-- Register -->
    <string name="register_title">Registration</string>
    <string name="register_full_name">Full name</string>
    <string name="register_password">Password</string>
    <string name="register_submit">Register</string>
    <string name="register_login">Login</string>
    <string name="register_have_account">Already have account? </string>

    <!--Forget Password-->
    <string name="forgot_password_title">Forget password</string>
    <string name="forgot_password_email">Email address</string>
    <string name="forgot_password_description">Please enter your email address to reset your password.</string>
    <string name="forgot_password_send">Send</string>

    <!-- New password -->
    <string name="new_password_title">Reset password</string>
    <string name="new_password_confirm_title">Confirm password</string>
    <string name="new_password_password_title">New password</string>
    <string name="new_password_description">Please enter the 6 digits code to reset your password.</string>
    <string name="new_password_reset">Reset</string>

    <!--Activation code-->
    <string name="activation_code_title">Verify your email</string>
    <string name="activation_code_description">Please enter the verification code we sent to your email.</string>
    <string name="activation_code_submit">Verify code</string>
    <string name="activation_code_resend_title">Don\'t receive the code?</string>
    <string name="activation_code_resend">Resend</string>

    <!--Bottom navigation-->
    <string name="bottom_navigation_home">Home</string>
    <string name="bottom_navigation_more">More</string>
    <string name="bottom_navigation_notifications">Notifications</string>
    <string name="bottom_navigation_services">Services</string>

    <!-- Home -->
    <string name="home_title">Home page</string>
    <string name="home_banner_welcome">Welcome to</string>
    <string name="home_banner_title">Islamic Message</string>
    <string name="home_banner_details">It is a long established fact that a reader will be distracted by the readable.</string>
    <string name="home_service_title">Services</string>
    <string name="home_categories_title">Islamic centers</string>
    <string name="home_categories_see_all">See all</string>
    <string name="home_categories_description">West London Islamic center</string>
    <string name="home_categories_location">England, London city</string>
    <string name="home_categories_time">MON, 28 SEP 2020</string>

    <!-- home categories titles -->
    <string name="home_islamic_centers_title">Islamic centers</string>
    <string name="home_events_title">Events</string>
    <string name="home_news_title">News</string>

    <!-- Service list -->
    <string name="service_list_search_hint">Search for %s … </string>
    
    <!-- More -->
    <string name="more_user_name">Ahmed Kareem</string>
    <string name="more_user_email">ahmed.kareem@gmail.com</string>
    <string name="more_account">Account</string>
    <string name="more_edit_profile">Edit Profile</string>
    <string name="more_favorites">Favorites</string>
    <string name="more_subscriptions">Subscriptions</string>
    <string name="more_settings">Settings</string>
    <string name="more_change_password">Change password</string>
    <string name="more_notifications_settings">Notifications settings</string>
    <string name="more_language_title">Language</string>
    <string name="more_language">English</string>
    <string name="more_about_app">About App</string>
    <string name="more_rate_us">Rate us</string>
    <string name="more_share">Share app</string>
    <string name="more_about_us">About us</string>
    <string name="more_terms_and_conditions">Terms &amp; Conditions</string>
    
    <!-- profile -->
    <string name="profile_photo_hint">Edit profile photo</string>
    <string name="profile_name_title">Name</string>
    <string name="profile_name">Ahmed Kareem</string>
    <string name="profile_email_title">Email address</string>
    <string name="profile_email">ahmed.kareem@gmail.com</string>
    <string name="profile_phone_title">Mobile Number (Optional)</string>
    <string name="profile_phone">Your mobile number…</string>
    <string name="profile_phone_code">+20</string>
    <string name="profile_gender_title">Gender</string>
    <string name="profile_gender_male">Male</string>
    <string name="profile_gender_female">Female</string>
    <string name="profile_save">Save Changes</string>

    <!--Errors -->
    <!--Login Errors -->
    <string name="error_login_email_empty">Please enter your email!</string>
    <string name="error_login_email_valid">Please enter valid email!</string>
    <string name="error_login_password_empty">Please enter your password!</string>

    <!-- register errors -->
    <string name="error_register_name_empty">Please enter your name!</string>
    <string name="error_register_email_empty">Please enter your email address!</string>
    <string name="error_register_email_wrong">Please enter a valid email address!</string>
    <string name="error_register_password_empty">Please enter your password!</string>
    <string name="error_register_password_wrong">Password must be at least 5 characters long! </string>

    <!-- activation code errors-->
    <string name="error_activation_code_empty">Please enter your code!</string>
    <string name="error_activation_code_wrong">Please enter your 6 digits code!</string>

    <!-- forgot password errors -->
    <string name="error_forgot_password_empty">Please enter your email!</string>
    <string name="error_forgot_password_wrong">Please enter a valid email!</string>

    <!-- new password errors -->
    <string name="error_new_password_empty">Please enter new password!</string>
    <string name="error_new_password_size">Password must be at least 5 characters long!</string>
    <string name="error_new_password_confirm_empty">Please confirm your password!</string>
    <string name="error_new_password_confirm_wrong">Password are not matching</string>

    <!-- base errors-->
    <string name="error_no_connection">Oops , there\'s no Network connection</string>
    <string name="error_message_title">Error!</string>
    <string name="success_message_title">Success</string>
    <string name="title_activity_home">MainActivity</string>
    
    <!-- list place holder errors -->
    <string name="error_list_try_again">There was a problem\n please click to reload</string>



    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="welcome_message_second">It is a long established fact that a reader\nwill be distracted by the readable</string>
    <string name="welcome_create_new_account">Create new account</string>
    <string name="welcome_continue_as_a_guest">Continue as a guest</string>
    <string name="label_submit">Submit</string>
    <string name="center_details_about">About</string>
    <string name="center_details_subscribe_now">Subscribe now</string>
    <string name="center_details_location">Location</string>
    <string name="center_details_contacts">Contacts</string>
    <string name="center_details_phone_number">Phone number</string>
    <string name="center_details_email">Email</string>
    <string name="center_details_facebook">Facebook</string>
    <string name="islamic_centers_title">Islamic Centers</string>
    <string name="islamic_centers_articles">Articles</string>


</resources>