<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:card_view="http://schemas.android.com/tools">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <!-- user details container -->
            <LinearLayout
                android:id="@+id/ll_more_user_details_container"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/dp16w"
                android:orientation="vertical">

                <!-- user image -->
                <androidx.cardview.widget.CardView
                    android:layout_width="@dimen/dp60w"
                    android:layout_height="@dimen/dp60h"
                    android:layout_gravity="center"
                    card_view:cardCornerRadius="155dp">

                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:scaleType="fitXY"
                        android:src="@drawable/img_user"
                        card_view:ignore="ContentDescription" />

                </androidx.cardview.widget.CardView>
                <!-- user name -->
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:fontFamily="@font/montserrat_bold"
                    android:gravity="center"
                    android:text="@string/more_user_name"
                    android:textColor="@color/colorBlack"
                    android:textSize="@dimen/sp20" />
                <!-- user email -->
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:fontFamily="@font/montserrat_semi_bold"
                    android:gravity="center"
                    android:text="@string/more_user_email"
                    android:textColor="@color/colorGrey"
                    android:textSize="@dimen/sp14" />

            </LinearLayout>

            <!-- line -->
            <View
                android:id="@+id/view_first_line"
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp2h"
                android:layout_below="@+id/ll_more_user_details_container"
                android:alpha="0.1"
                android:background="@color/colorBlack" />

            <!-- user account container -->
            <LinearLayout
                android:id="@+id/ll_more_user_account_container"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/view_first_line"
                android:layout_margin="@dimen/dp16w"
                android:orientation="vertical">

                <!-- account title -->
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="start"
                    android:fontFamily="@font/montserrat_semi_bold"
                    android:gravity="start"
                    android:text="@string/more_account"
                    android:textColor="@color/colorGrey"
                    android:textSize="@dimen/sp15" />
                <!-- edit profile -->
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="start|center"
                    android:layout_marginTop="@dimen/dp8w"
                    android:drawablePadding="@dimen/dp16w"
                    android:fontFamily="@font/montserrat_semi_bold"
                    android:gravity="start|center"
                    android:text="@string/more_edit_profile"
                    android:textColor="@color/colorBlack"
                    android:textSize="@dimen/sp15"
                    app:drawableStartCompat="@drawable/ic_user_profile" />
                <!-- favorites -->
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="start|center"
                    android:layout_marginTop="@dimen/dp8w"
                    android:drawablePadding="@dimen/dp16w"
                    android:fontFamily="@font/montserrat_semi_bold"
                    android:gravity="start|center"
                    android:text="@string/more_favorites"
                    android:textColor="@color/colorBlack"
                    android:textSize="@dimen/sp15"
                    app:drawableStartCompat="@drawable/ic_favorites" />
                <!-- favorites -->
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="start|center"
                    android:layout_marginTop="@dimen/dp8w"
                    android:drawablePadding="@dimen/dp16w"
                    android:fontFamily="@font/montserrat_semi_bold"
                    android:gravity="start|center"
                    android:text="@string/more_subscriptions"
                    android:textColor="@color/colorBlack"
                    android:textSize="@dimen/sp15"
                    app:drawableStartCompat="@drawable/ic_subscriptions" />

            </LinearLayout>

            <!-- line -->
            <View
                android:id="@+id/view_second_line"
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp2h"
                android:layout_below="@+id/ll_more_user_account_container"
                android:alpha="0.1"
                android:background="@color/colorBlack" />

            <!-- account settings -->
            <LinearLayout
                android:id="@+id/ll_more_account_settings_container"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/view_second_line"
                android:layout_margin="@dimen/dp16w"
                android:orientation="vertical">

                <!-- settings title -->
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="start"
                    android:fontFamily="@font/montserrat_semi_bold"
                    android:gravity="start"
                    android:text="@string/more_settings"
                    android:textColor="@color/colorGrey"
                    android:textSize="@dimen/sp15" />
                <!-- change password -->
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="start|center"
                    android:layout_marginTop="@dimen/dp8w"
                    android:drawablePadding="@dimen/dp16w"
                    android:fontFamily="@font/montserrat_semi_bold"
                    android:gravity="start|center"
                    android:text="@string/more_change_password"
                    android:textColor="@color/colorBlack"
                    android:textSize="@dimen/sp15"
                    app:drawableStartCompat="@drawable/ic_change_password" />
                <!-- notification -->
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="start|center"
                    android:layout_marginTop="@dimen/dp8w"
                    android:drawablePadding="@dimen/dp16w"
                    android:fontFamily="@font/montserrat_semi_bold"
                    android:gravity="start|center"
                    android:text="@string/more_notifications_settings"
                    android:textColor="@color/colorBlack"
                    android:textSize="@dimen/sp15"
                    app:drawableStartCompat="@drawable/ic_notifications" />
                <!-- language container -->
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/dp8w"
                    android:orientation="horizontal">

                    <!-- language title -->
                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_weight="1"
                        android:drawablePadding="@dimen/dp16w"
                        android:fontFamily="@font/montserrat_semi_bold"
                        android:gravity="start|center"
                        android:text="@string/more_language_title"
                        android:textColor="@color/colorBlack"
                        android:textSize="@dimen/sp15"
                        app:drawableStartCompat="@drawable/ic_language" />
                    <!-- language -->
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:drawablePadding="@dimen/dp16w"
                        android:fontFamily="@font/montserrat_semi_bold"
                        android:gravity="start|center"
                        android:text="@string/more_language"
                        android:textColor="@color/colorGrey"
                        android:textSize="@dimen/sp15"
                        app:drawableEndCompat="@drawable/ic_arrow_right_gray" />

                </LinearLayout>

            </LinearLayout>

            <!-- line -->
            <View
                android:id="@+id/view_third_line"
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp2h"
                android:layout_below="@+id/ll_more_account_settings_container"
                android:alpha="0.1"
                android:background="@color/colorBlack" />

            <!-- about app container -->
            <LinearLayout
                android:id="@+id/ll_more_about_app_container"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/dp16w"
                android:layout_below="@+id/view_third_line"
                android:orientation="vertical">

                <!-- about app title -->
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="start"
                    android:fontFamily="@font/montserrat_semi_bold"
                    android:gravity="start"
                    android:text="@string/more_about_app"
                    android:textColor="@color/colorGrey"
                    android:textSize="@dimen/sp15" />
                <!-- rate us -->
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="start|center"
                    android:layout_marginTop="@dimen/dp8w"
                    android:drawablePadding="@dimen/dp16w"
                    android:fontFamily="@font/montserrat_semi_bold"
                    android:gravity="start|center"
                    android:text="@string/more_rate_us"
                    android:textColor="@color/colorBlack"
                    android:textSize="@dimen/sp15"
                    app:drawableStartCompat="@drawable/ic_rate" />
                <!-- share  -->
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="start|center"
                    android:layout_marginTop="@dimen/dp8w"
                    android:drawablePadding="@dimen/dp16w"
                    android:fontFamily="@font/montserrat_semi_bold"
                    android:gravity="start|center"
                    android:text="@string/more_share"
                    android:textColor="@color/colorBlack"
                    android:textSize="@dimen/sp15"
                    app:drawableStartCompat="@drawable/ic_share" />
                <!-- about us -->
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="start|center"
                    android:layout_marginTop="@dimen/dp8w"
                    android:drawablePadding="@dimen/dp16w"
                    android:fontFamily="@font/montserrat_semi_bold"
                    android:gravity="start|center"
                    android:text="@string/more_about_us"
                    android:textColor="@color/colorBlack"
                    android:textSize="@dimen/sp15"
                    app:drawableStartCompat="@drawable/ic_about" />
                <!-- terms -->
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="start|center"
                    android:layout_marginTop="@dimen/dp8w"
                    android:drawablePadding="@dimen/dp16w"
                    android:fontFamily="@font/montserrat_semi_bold"
                    android:gravity="start|center"
                    android:text="@string/more_terms_and_conditions"
                    android:textColor="@color/colorBlack"
                    android:textSize="@dimen/sp15"
                    app:drawableStartCompat="@drawable/ic_terms" />

            </LinearLayout>

        </RelativeLayout>

    </ScrollView>

</layout>