<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">


    <LinearLayout
        android:id="@+id/ll_service_parent"
        android:layout_width="@dimen/dp240w"
        android:layout_height="wrap_content"
        android:orientation="vertical">


        <!-- image -->
        <androidx.cardview.widget.CardView
            android:id="@+id/cv_service_image_container"
            android:layout_width="@dimen/dp240w"
            android:layout_height="wrap_content"
            app:cardCornerRadius="@dimen/dp8w"
            app:cardUseCompatPadding="true">

            <ImageView
                android:id="@+id/iv_service_image"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:scaleType="centerCrop"
                android:src="@drawable/img_islamic_center"
                tools:ignore="ContentDescription" />


        </androidx.cardview.widget.CardView>

        <!-- Time -->
        <TextView
            android:id="@+id/tv_service_date"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dp8w"
            android:layout_marginEnd="@dimen/dp8w"
            android:fontFamily="@font/montserrat_semi_bold"
            android:text="@string/home_categories_time"
            android:textColor="@color/colorPrimary"
            android:textSize="@dimen/sp12" />

        <!-- details -->
        <TextView
            android:id="@+id/tv_service_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dp8w"
            android:layout_marginEnd="@dimen/dp8w"
            android:fontFamily="@font/montserrat_bold"
            android:singleLine="false"
            android:text="@string/home_categories_description"
            android:textColor="@color/colorBlack"
            android:textSize="@dimen/sp15" />

        <!-- location -->
        <TextView
            android:id="@+id/tv_service_location"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dp8w"
            android:layout_marginEnd="@dimen/dp8w"
            android:layout_marginBottom="@dimen/dp16w"
            android:fontFamily="@font/montserrat_semi_bold"
            android:text="@string/home_categories_location"
            android:textColor="@color/colorGrey"
            android:textSize="@dimen/sp13" />

    </LinearLayout>


</layout>